--- a/stanfordnlp/stanfordnlp_test.ipynb
+++ b/stanfordnlp/stanfordnlp_test.ipynb
@@ -2,18 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import stanfordnlp"
+    "import stanfordnlp\n",
+    "from graphviz import Digraph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the default treebank \"ru_syntagrus\" for language \"ru\".\n",
+      "Would you like to download the models for: ru_syntagrus now? (Y/n)\n",
+      "Y\n",
+      "\n",
+      "Default download directory: /home/alex/stanfordnlp_resources\n",
+      "Hit enter to continue or type an alternate directory.\n",
+      "\n",
+      "\n",
+      "Downloading models for: ru_syntagrus\n",
+      "Download location: /home/alex/stanfordnlp_resources/ru_syntagrus_models.zip\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 236M/236M [06:12<00:00, 677kB/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Download complete.  Models saved to: /home/alex/stanfordnlp_resources/ru_syntagrus_models.zip\n",
+      "Extracting models file for: ru_syntagrus\n",
+      "Cleaning up...Done.\n"
+     ]
+    }
+   ],
    "source": [
     "#stanfordnlp.download('ru') "
    ]
@@ -31,15 +68,15 @@
       "---\n",
       "Loading: tokenize\n",
       "With settings: \n",
-      "{'model_path': 'C:\\\\Users\\\\Alexander\\\\stanfordnlp_resources\\\\ru_syntagrus_models\\\\ru_syntagrus_tokenizer.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
+      "{'model_path': '/home/alex/stanfordnlp_resources/ru_syntagrus_models/ru_syntagrus_tokenizer.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
       "---\n",
       "Loading: pos\n",
       "With settings: \n",
-      "{'model_path': 'C:\\\\Users\\\\Alexander\\\\stanfordnlp_resources\\\\ru_syntagrus_models\\\\ru_syntagrus_tagger.pt', 'pretrain_path': 'C:\\\\Users\\\\Alexander\\\\stanfordnlp_resources\\\\ru_syntagrus_models\\\\ru_syntagrus.pretrain.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
+      "{'model_path': '/home/alex/stanfordnlp_resources/ru_syntagrus_models/ru_syntagrus_tagger.pt', 'pretrain_path': '/home/alex/stanfordnlp_resources/ru_syntagrus_models/ru_syntagrus.pretrain.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
       "---\n",
       "Loading: lemma\n",
       "With settings: \n",
-      "{'model_path': 'C:\\\\Users\\\\Alexander\\\\stanfordnlp_resources\\\\ru_syntagrus_models\\\\ru_syntagrus_lemmatizer.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
+      "{'model_path': '/home/alex/stanfordnlp_resources/ru_syntagrus_models/ru_syntagrus_lemmatizer.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
       "Building an attentional Seq2Seq model...\n",
       "Using a Bi-LSTM encoder\n",
       "Using soft attention for LSTM.\n",
@@ -48,7 +85,7 @@
       "---\n",
       "Loading: depparse\n",
       "With settings: \n",
-      "{'model_path': 'C:\\\\Users\\\\Alexander\\\\stanfordnlp_resources\\\\ru_syntagrus_models\\\\ru_syntagrus_parser.pt', 'pretrain_path': 'C:\\\\Users\\\\Alexander\\\\stanfordnlp_resources\\\\ru_syntagrus_models\\\\ru_syntagrus.pretrain.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
+      "{'model_path': '/home/alex/stanfordnlp_resources/ru_syntagrus_models/ru_syntagrus_parser.pt', 'pretrain_path': '/home/alex/stanfordnlp_resources/ru_syntagrus_models/ru_syntagrus.pretrain.pt', 'lang': 'ru', 'shorthand': 'ru_syntagrus', 'mode': 'predict'}\n",
       "Done loading processors!\n",
       "---\n"
      ]
@@ -60,33 +97,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = nlp(\"Переведи маме сто рублей.\")"
+    "doc = nlp(\"Рядом с красной современной машиной стоят два деревянных стула.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_vis_graph(dep_tree):\n",
+    "    G = Digraph()\n",
+    "    for dep in dep_tree:\n",
+    "        if dep[2].upos != 'PUNCT':\n",
+    "            G.node(dep[2].index, dep[2].text)\n",
+    "    for dep in dep_tree:\n",
+    "        if dep[0].text != 'ROOT' and dep[2].upos != 'PUNCT':\n",
+    "            G.edge(dep[0].index, dep[2].index, label=dep[2].dependency_relation)\n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = create_vis_graph(doc.sentences[0].dependencies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Переведи', '0', 'root')\n",
-      "('маме', '1', 'iobj')\n",
-      "('сто', '4', 'nummod:gov')\n",
-      "('рублей', '1', 'obl')\n",
-      "('.', '1', 'punct')\n"
-     ]
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.40.1 (20161225.0304)\n",
+       " -->\n",
+       "<!-- Title: %3 Pages: 1 -->\n",
+       "<svg width=\"368pt\" height=\"305pt\"\n",
+       " viewBox=\"0.00 0.00 367.90 305.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 301)\">\n",
+       "<title>%3</title>\n",
+       "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-301 363.895,-301 363.895,4 -4,4\"/>\n",
+       "<!-- 1 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>1</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"117\" cy=\"-192\" rx=\"35.194\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"117\" y=\"-188.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">Рядом</text>\n",
+       "</g>\n",
+       "<!-- 5 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>5</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"113\" cy=\"-105\" rx=\"45.4919\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"113\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">машиной</text>\n",
+       "</g>\n",
+       "<!-- 1&#45;&gt;5 -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>1&#45;&gt;5</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M116.1712,-173.9735C115.6295,-162.1918 114.9108,-146.5607 114.2946,-133.1581\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"117.7834,-132.832 113.8277,-123.0034 110.7908,-133.1536 117.7834,-132.832\"/>\n",
+       "<text text-anchor=\"middle\" x=\"125\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">obl</text>\n",
+       "</g>\n",
+       "<!-- 2 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>2</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"27\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">с</text>\n",
+       "</g>\n",
+       "<!-- 3 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>3</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"113\" cy=\"-18\" rx=\"40.8928\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"113\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">красной</text>\n",
+       "</g>\n",
+       "<!-- 4 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>4</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"232\" cy=\"-18\" rx=\"59.5901\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"232\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">современной</text>\n",
+       "</g>\n",
+       "<!-- 5&#45;&gt;2 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>5&#45;&gt;2</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M96.4183,-88.2255C83.0345,-74.6861 64.0759,-55.507 49.3523,-40.6122\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"51.61,-37.9176 42.0908,-33.2663 46.6317,-42.8386 51.61,-37.9176\"/>\n",
+       "<text text-anchor=\"middle\" x=\"88\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">case</text>\n",
+       "</g>\n",
+       "<!-- 5&#45;&gt;3 -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>5&#45;&gt;3</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M113,-86.9735C113,-75.1918 113,-59.5607 113,-46.1581\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"116.5001,-46.0033 113,-36.0034 109.5001,-46.0034 116.5001,-46.0033\"/>\n",
+       "<text text-anchor=\"middle\" x=\"128.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">amod</text>\n",
+       "</g>\n",
+       "<!-- 5&#45;&gt;4 -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>5&#45;&gt;4</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M134.8264,-89.0429C153.344,-75.5048 180.1317,-55.9205 200.894,-40.7414\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"203.0882,-43.4728 209.0952,-34.7455 198.9569,-37.822 203.0882,-43.4728\"/>\n",
+       "<text text-anchor=\"middle\" x=\"195.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">amod</text>\n",
+       "</g>\n",
+       "<!-- 6 -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>6</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"159\" cy=\"-279\" rx=\"32.4942\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"159\" y=\"-275.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">стоят</text>\n",
+       "</g>\n",
+       "<!-- 6&#45;&gt;1 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>6&#45;&gt;1</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M144.1404,-262.7156C139.3939,-256.8391 134.4759,-249.9375 131,-243 127.3966,-235.8082 124.6199,-227.5658 122.5261,-219.8342\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"125.9214,-218.9839 120.1549,-210.0958 119.1201,-220.64 125.9214,-218.9839\"/>\n",
+       "<text text-anchor=\"middle\" x=\"153.5\" y=\"-231.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">advmod</text>\n",
+       "</g>\n",
+       "<!-- 9 -->\n",
+       "<g id=\"node9\" class=\"node\">\n",
+       "<title>9</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"203\" cy=\"-192\" rx=\"31.6951\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"203\" y=\"-188.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">стула</text>\n",
+       "</g>\n",
+       "<!-- 6&#45;&gt;9 -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>6&#45;&gt;9</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M167.9041,-261.3943C174.1065,-249.1303 182.4925,-232.5489 189.5117,-218.67\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"192.7193,-220.0828 194.1092,-209.5796 186.4727,-216.9236 192.7193,-220.0828\"/>\n",
+       "<text text-anchor=\"middle\" x=\"199\" y=\"-231.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">nsubj</text>\n",
+       "</g>\n",
+       "<!-- 7 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>7</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"203\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"203\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">два</text>\n",
+       "</g>\n",
+       "<!-- 8 -->\n",
+       "<g id=\"node8\" class=\"node\">\n",
+       "<title>8</title>\n",
+       "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"304\" cy=\"-105\" rx=\"55.7903\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"304\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">деревянных</text>\n",
+       "</g>\n",
+       "<!-- 9&#45;&gt;7 -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>9&#45;&gt;7</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M203,-173.9735C203,-162.1918 203,-146.5607 203,-133.1581\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"206.5001,-133.0033 203,-123.0034 199.5001,-133.0034 206.5001,-133.0033\"/>\n",
+       "<text text-anchor=\"middle\" x=\"240\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">nummod:gov</text>\n",
+       "</g>\n",
+       "<!-- 9&#45;&gt;8 -->\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
+       "<title>9&#45;&gt;8</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" d=\"M231.9201,-184.1684C248.0601,-178.5578 267.5601,-169.5578 281,-156 287.3893,-149.5547 292.1785,-141.0202 295.6845,-132.7802\"/>\n",
+       "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"298.9737,-133.9771 299.2298,-123.3854 292.4245,-131.5056 298.9737,-133.9771\"/>\n",
+       "<text text-anchor=\"middle\" x=\"306.5\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">amod</text>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.dot.Digraph at 0x7faebd397278>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "doc.sentences[0].print_dependencies()"
+    "G"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
